# f4-plugin

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  STYLE_GUIDE.md  final_adr.md  pyproject.toml
.development-notes/: bedrock-deployment.md  collated-flag-set.md  debug_output.txt  evaluation_results.md  gradio-plan.md  library-layer-plan.md  project-checklist.md  rag-setup-plan.md  retrain-plan.md  terminal-commands.md  training-loop-plan.md
.development-notes/notes/: bedrock-deployment.md  collated-flag-set.md  demo.md  evaluation_results.md  final_adr.md  handoff_temp.md  real-data-gen-notes.md  retrospective.md  rubric-grade-sim.md  test-labeling-prompt.md
.development-notes/plans/: real-data-plan.md  training-loop-plan.md  validation-pass-plan.md
data/: eval.jsonl  rag_seeds_real.jsonl  test.jsonl  train.jsonl
evaluation/: evaluate.py
scripts/: bedrock_token_limit.py  build_training_set.py  clean_zero_recall_flags.py  debug_pipeline.py  generate_data.py  label_real_data.py  label_test_set.py  opus_label_test_set.py  opus_validate_labels.py  populate_rag.py  relabel_training_data.py  rewrap_rag_context.py  split_test.py  supplement_rare_flags.py  system-prompt.md  test_bedrock_live.py  train.py  validate_labels.py
src/domain/: parsing.py  (+3 more)
tests/: test_bedrock.py  test_chunker.py  test_decision.py  test_entities.py  test_evaluate.py  test_extraction.py  test_frontend.py  test_parsing.py  test_pipeline.py  test_rag_store.py  test_retriever.py  test_taxonomy.py  test_training.py
training/: check_token_lengths.py  evaluate.py  merge_and_export.py
(+21 files in other folders)
